--- a/index.html
+++ b/index.html
@@ -78,36 +78,36 @@
             <img src="./images/icons/js.png" alt="js" />
             <p class="skill-title">Vanila javaSccript</p>
             <p class="skill-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-              dolorum officiis, quas ipsam sit odio nemo labore id deserunt
-              cumque?
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
             </p>
           </div>
           <div class="skill">
             <img src="./images/icons/react.png" alt="react" />
             <p class="skill-title">React</p>
             <p class="skill-description">
-              Officia quae aspernatur, architecto laborum facere a eos veritatis
-              possimus quis asperiores aliquid ab magni saepe dolor doloribus
-              odio vero?
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
             </p>
           </div>
           <div class="skill">
             <img src="./images/icons/nodejs.png" alt="node-js" />
-            <p class="skill-title">Node JS</p>
+            <p class="skill-title">Node.Js</p>
             <p class="skill-description">
-              Neque quod quibusdam, rerum delectus, assumenda doloremque aut
-              natus molestiae beatae quo at. Nisi aliquid mollitia cupiditate
-              eum, ut earum?
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
             </p>
           </div>
           <div class="skill">
             <img src="./images/icons/mongo.png" alt="mongo" />
             <p class="skill-title">Mongodb</p>
             <p class="skill-description">
-              Non, possimus hic? Iste quos nulla amet ullam veniam excepturi
-              quisquam, non hic odio quaerat dolores deleniti esse suscipit
-              sunt.
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
             </p>
           </div>
         </div>
