--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my portfolio</title>
+
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
@@ -22,7 +23,7 @@
       <!-- banner -->
       <div class="banner">
         <div>
-          <h3 class="banner-subtitle">Hi I am</h3>
+          <h3 class="banner-subtitle">Hi, I am</h3>
           <h1 class="banner-title">Mary Hardy</h1>
           <p class="banner-description">
             Shot what able cold new see hold.Friendly as an betrayed formerly
