khotom kore dlm

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my portfolio</title>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="styles/portfolio.css" />
   </head>
   <body>
@@ -113,8 +116,107 @@
           </div>
         </div>
       </section>
+
+      <section class="experience">
+        <h1 class="summary">A summary of My Resume</h1>
+        <div class="resome-container">
+          <div class="resome-sub-container">
+            <h1>My Education</h1>
+            <div class="content-container btm-line">
+              <h2>Master in Computer Engineering</h2>
+              <h3>Harvard University / 2015 - 2017</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="content-container btm-line">
+              <h2>Master in Computer Engineering</h2>
+              <h3>Harvard University / 2015 - 2017</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="content-container">
+              <h2>Master in Computer Engineering</h2>
+              <h3>Harvard University / 2015 - 2017</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="resome-sub-container">
+            <h1>My Experience</h1>
+            <div class="content-container btm-line">
+              <h2>Sr. Font End Developer</h2>
+              <h3>Apple Inc / 2020 - Current</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="content-container btm-line">
+              <h2>Jr. Font End Developer</h2>
+              <h3>Dribbble Inc / 2018 - 2022</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="content-container">
+              <h2>HTML Developer</h2>
+              <h3>Adobe Inc / 2017 - 2018</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button class="btn-primary cv-btn">Download cv</button>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="left-container">
+          <h1>Lets Connect</h1>
+          <p>
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          <div class="icon">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+        <form>
+          <header>
+            <h1 class="form-title">Let’s Message me</h1>
+          </header>
+          <input type="text" id="name" placeholder="Your Name" /> <br />
+          <input type="email" id="email" placeholder="Your Email" /> <br />
+          <textarea
+            name=""
+            id="textarea"
+            cols="30"
+            rows="5"
+            placeholder="Massage"
+          ></textarea>
+          <br />
+          <br />
+          <input type="submit" value="Submit" class="btn-primary" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
