Responsive added for mobile scrn

--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
         <ul>
           <li>Portfolio</li>
           <li>Blog</li>
-          <li><button class="btn-primary">Hire</button></li>
+          <button class="btn-primary">Hire</button>
         </ul>
       </nav>
       <!-- banner -->
       <div class="banner">
-        <div>
+        <div class="rapper">
           <h3 class="banner-subtitle">Hi, I am</h3>
           <h1 class="banner-title">Mary Hardy</h1>
           <p class="banner-description">
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download cv</button>
-          <button class="btn-primary">Contact</button>
+          <div class="btn-section">
+            <button class="btn-primary">Download cv</button>
+            <button class="btn-primary">Contact</button>
+          </div>
         </div>
         <img src="./images/hardy.png" alt="Hardy" />
       </div>
@@ -49,7 +51,7 @@
           while working with me. Delivering work within time and budget which
           meets clients requirements in our mata.
         </p>
-        <table>
+        <table id="table">
           <thead>
             <tr>
               <th>Name:</th>
@@ -214,7 +216,7 @@
           ></textarea>
           <br />
           <br />
-          <input type="submit" value="Submit" class="btn-primary" />
+          <input type="submit" value="Submit" class="primary-btn" />
         </form>
       </div>
     </footer>
