--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           ></textarea>
           <br />
           <br />
-          <input type="submit" value="Submit" class="primary-btn" />
+          <input type="submit" value="Submit" class="btn-primary" />
         </form>
       </div>
     </footer>
